# catalog-rs

./: .gitignore  Cargo.toml  Key_Device_FW_control.xlsx  Precision_0CBB.cab  Precision_0CBB.xml  Rosa Key Device FW control_2024-10-28.xlsx  Untitled.ipynb  _Precision_0CBB.xml  demo_122847.py  example.xlsx  handle_excel.py  pyproject.toml  test_autoui.py
catalog-lib/: Cargo.toml
catalog-lib/src/: error.rs  lib.rs
catalog-ui/: Cargo.toml
catalog-ui/src/: main.rs  trait_test.rs
lib/: Cargo.toml
lib/src/: lib.rs  type.rs
src/: demo_122847.py  main.rs  test_autoui.py
