[project]
name = "catalog-rs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1.5",
]

[tool.ruff]
line-length = 100 # 依照自己的專案需求設定

[tool.ruff.lint]
select = ["E", "F", "I"] # 至少會加入 I，因為 isort 是必要的

[tool.ruff.format]
quote-style = "single" # 依照自己的喜好或專案需求設定
