[package]
name = "catalog-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }
iced = { workspace = true }
walkdir = "2"
sha3 = "0.10.8"
data-encoding = "2.6.0"
xml = "0.8.20"
thiserror = "2.0.0"
