[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
sha3 = "0.10.8"
data-encoding = "2.6.0"
serde-xml-rs = "0.6.0"
[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
]
